Handle audio streaming

--- a/client/index.html
+++ b/client/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/j.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Jarvis-AI voice assistant</title>
   </head>
   <body>
     <div style="background: linear-gradient(135deg, #0d0d0d, #121212, #1f1f3a, #0a192f);" id="root"></div>
